src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;700;800&family=Kaushan+Script&display=swap');

$cherry: rgba(58, 9, 11, 1);
$light-cherry: rgba(58, 9, 11, 0.25);
$pink: rgba(231, 113, 127, 1);
$light-pink: rgba(231, 113, 127, 0.25);
$gray: rgba(230, 230, 230, 1);
$light-gray: rgba(233, 233, 233, 0.5);
$shadow-gray: rgb(150, 150, 150);
$dark-gray: rgb(128, 128, 128);
$white: #FFFFFF;

html {
  font-size: 16px;
}

body {
  position: relative;
  box-sizing: border-box;
  font-family: 'Catamaran', sans-serif;
  color: $cherry;
  font-size: 1rem;
  margin: 0;
}

.app {
  display: flex;
  flex-direction: column;
  width: min(100%, 1600px);
  margin-inline: auto;
  background: transparent;
  background-image: url('../public/images/background.jpg');
  background-repeat: no-repeat;
  background-size: 100%;
  position: relative;
  z-index: 1;
}

.app::before {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(230, 230, 230, 0.80);
  z-index: -1;
}

svg {
  color: $cherry;

  &:hover {
    color: $pink;
  }
}

.navbar {
  position: fixed;
  top: 0;
  width: min(100%, 1300px);
  height: clamp(30px, 2vw, 50px);
  padding-inline: clamp(10px, 10vw, 150px);
  padding-block: clamp(20px, 2vw, 30px);
  margin-bottom: clamp(20px, 2vw, 30px);
  z-index: 5;
  
  &.mobile {
    padding-inline: clamp(10px, 3vw, 50px);
  }

  &.cherry-bg {
    background-color: $cherry;
    box-shadow: 0px 10px 10px -10px gray;

    .navlink {
      color: $white;
    }

    button svg {
      color: $white;

      &:hover {
        color: $pink;
      }
    }
  }

  .navlink {
    font-size: clamp(0.75rem, 1vw, 1.25rem);
    letter-spacing: 1.4px;
    text-decoration: none;
    padding-right: clamp(50px, 5vw, 100px);
    color: $cherry;

    &:hover {
      color: $pink;
    }
  }

  .navlink.active {
    font-weight: 900;
  }
}

.menu-icon {
  position: absolute; 
  top: 0;
  border: none;
  background: transparent;
  margin: clamp(20px, 3vw, 75px);
  cursor: pointer;

  svg {
    color: $cherry;
    width: clamp(20px, 5vw, 50px);
    height: 100%;
  }
}

.menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: $cherry;
  z-index: 20;
  
  button {
    border: none;
    background: transparent;
    margin: 20px;
    cursor: pointer;
    
    svg {
      color: $white;
      width: 30px;
      height: 100%;

      &:hover {
        color: $pink;
      }
    }
  }

  ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;

    li {
      padding: clamp(10px, 2vw, 20px);
      margin: clamp(10px, 1vw, 10px);
      list-style: none;
    }

    li * {
      text-decoration: none;
      color: $white;
      font-size: clamp(0.75rem, 2vw, 1rem);
      font-weight: 700;
      letter-spacing: 2px;

      &:hover {
        color: $pink;
      }
    }
  }
}

.btn {
  border-radius: clamp(5px, 0.25vw, 10px);
  border-radius: 50px;
  width: 100px;
  text-decoration: none;
  font-weight: 700;
  font-size: clamp(0.5rem, 1vw, 1rem);
  padding-block: clamp(5px, 1.25vw, 15px);
  padding-inline: clamp(5px, 2vw, 30px);
  margin-right: clamp(5px, 0.75vw, 15px);
  border: none;
  cursor: pointer;
  color: $white;
  background-color: $cherry;
  border: 1px solid $cherry;

    &:hover {
      background-color: $pink;
    }

  &.secondary-btn {
    color: $cherry;
    border: 1px solid $cherry;
    background-color: $white;

    &:hover {
      color: $white;
      background-color: $pink;
    }
  }
}

.home-page {
  position: relative;
  display: flex;
  align-items: center;
  margin-top: clamp(75px, 10vw, 150px);

  .home {
    width: 100%;
    border-radius: 20px;
    background-color: $white;
    margin-right: clamp(50px, 10vw, 150px);
    margin-left: clamp(100px, 20vw, 300px);
    padding-block: clamp(50px, 10vw, 100px);
    padding-left: clamp(120px, 15vw, 200px);
    padding-right: clamp(30px, 5vw, 75px);

    h1 {
      font-size: clamp(1.25rem, 3.5vw, 3.5rem);
      font-weight: 400;
      margin: 0;

      span {
        font-size: clamp(1.75rem, 5vw, 4.5rem);
        font-family: 'Kaushan Script', cursive;
        color: $pink;
      }
    }

    h2 {
      font-size: clamp(0.5rem, 1.5vw, 1.5rem);
      font-weight: 100;
      letter-spacing: 2px;
      margin: 0;
    }

    .socials-description {
      display: flex;
      align-items: center;
      margin-block: clamp(10px, 1.5vw, 30px);

      .home-socials {
        text-align: center;
        margin-right: clamp(10px, 1.5vw, 20px);


        svg {
          width: clamp(15px, 1.5vw, 30px);
          margin-bottom: clamp(0px, 1vw, 30px);
        }

        svg.linkedin {
          width: clamp(12px, 1.3vw, 25px);
          height: 100%;
        }
      }
      
      p {
        font-size: clamp(0.75rem, 1.25vw, 1.5rem);
        letter-spacing: 0.15px;
        line-height: 175%;
      }
    }

    .home-buttons {
        margin-block: clamp(10px, 3vw, 50px);

    }
  }
}

.phone-container {
  position: absolute;
  top: 0;
  left: clamp(20px, 10vw, 150px);
  height: 100%;
  display: flex;
  align-items: center;
}
/* ... */

